[package]
name = "cumulative_activity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
geoutils = "0.5.1"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.186", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }